Initial support for grids based on the infinite Goldberg polyhedra

--- a/Makefile.dggal
+++ b/Makefile.dggal
@@ -56,6 +56,7 @@ _ECSOURCES = \
 	src/dggrs/ISEA3H.ec \
 	src/dggrs/ISEA3HSubZones.ec \
 	src/dggrs/ISEA9R.ec \
+	src/dggrs/IGP3H.ec \
 	src/isea/isea5x6.ec \
 	src/isea/isea.ec \
 	src/dggsJSON/dggsJSON.ec \
@@ -198,6 +199,9 @@ $(OBJ)ISEA3HSubZones.sym: src/dggrs/ISEA3HSubZones.ec
 $(OBJ)ISEA9R.sym: src/dggrs/ISEA9R.ec
 	$(ECP) $(CFLAGS) $(CECFLAGS) $(ECFLAGS) $(PRJ_CFLAGS) -c $(call quote_path,src/dggrs/ISEA9R.ec) -o $(call quote_path,$@)
 
+$(OBJ)IGP3H.sym: src/dggrs/IGP3H.ec
+	$(ECP) $(CFLAGS) $(CECFLAGS) $(ECFLAGS) $(PRJ_CFLAGS) -c $(call quote_path,src/dggrs/IGP3H.ec) -o $(call quote_path,$@)
+
 $(OBJ)isea5x6.sym: src/isea/isea5x6.ec
 	$(ECP) $(CFLAGS) $(CECFLAGS) $(ECFLAGS) $(PRJ_CFLAGS) -c $(call quote_path,src/isea/isea5x6.ec) -o $(call quote_path,$@)
 
@@ -233,6 +237,9 @@ $(OBJ)ISEA3HSubZones.c: src/dggrs/ISEA3HSubZones.ec $(OBJ)ISEA3HSubZones.sym | $
 $(OBJ)ISEA9R.c: src/dggrs/ISEA9R.ec $(OBJ)ISEA9R.sym | $(SYMBOLS)
 	$(ECC) $(CFLAGS) $(CECFLAGS) $(ECFLAGS) $(PRJ_CFLAGS) $(FVISIBILITY) -c $(call quote_path,src/dggrs/ISEA9R.ec) -o $(call quote_path,$@) -symbols $(OBJ)
 
+$(OBJ)IGP3H.c: src/dggrs/IGP3H.ec $(OBJ)IGP3H.sym | $(SYMBOLS)
+	$(ECC) $(CFLAGS) $(CECFLAGS) $(ECFLAGS) $(PRJ_CFLAGS) $(FVISIBILITY) -c $(call quote_path,src/dggrs/IGP3H.ec) -o $(call quote_path,$@) -symbols $(OBJ)
+
 $(OBJ)isea5x6.c: src/isea/isea5x6.ec $(OBJ)isea5x6.sym | $(SYMBOLS)
 	$(ECC) $(CFLAGS) $(CECFLAGS) $(ECFLAGS) $(PRJ_CFLAGS) $(FVISIBILITY) -c $(call quote_path,src/isea/isea5x6.ec) -o $(call quote_path,$@) -symbols $(OBJ)
 
@@ -267,6 +274,9 @@ $(OBJ)ISEA3HSubZones$(O): $(OBJ)ISEA3HSubZones.c
 
 $(OBJ)ISEA9R$(O): $(OBJ)ISEA9R.c
 	$(CC) $(CFLAGS) $(PRJ_CFLAGS) $(FVISIBILITY) -c $(call quote_path,$(OBJ)ISEA9R.c) -o $(call quote_path,$@)
+
+$(OBJ)IGP3H$(O): $(OBJ)IGP3H.c
+	$(CC) $(CFLAGS) $(PRJ_CFLAGS) $(FVISIBILITY) -c $(call quote_path,$(OBJ)IGP3H.c) -o $(call quote_path,$@)
 
 $(OBJ)isea5x6$(O): $(OBJ)isea5x6.c
 	$(CC) $(CFLAGS) $(PRJ_CFLAGS) $(FVISIBILITY) -c $(call quote_path,$(OBJ)isea5x6.c) -o $(call quote_path,$@)
